[package]
name = "vcli"
version = "0.1.4"
edition = "2021"
authors = ["Coien-rr <972054003@qq.com>"]
license = "MIT"
description = "my tiny CLI for init C++ Project"
readme = "README.md"
repository = "https://github.com/Coien-rr/vCLI"
keywords = ["cli", "init", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
clap = { version = "4.3.12", features = ["derive"] }
